@@ -8,3 +8,5 @@
 2025-05-08 14:11: 新增 lib/scene/baixing_real_name_auth_scene.dart 实名认证界面，更新工程索引.md和doc/scene.md文档。
 
 2025-05-08 15:18: 修改 lib/scene/baixing_real_name_auth_scene.dart，添加勾选框左右抖动动画效果。
+
+2025-05-08 17:54: 修改 lib/api/baixing_api_dialog.dart 中的 baixing_showGuildListDialog 函数，将 showBottomSheet 改为 showModalBottomSheet，修复了找不到 Scaffold 组件的错误。
